# gsplat-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  RELEASING.md  SECURITY.md  deny.toml  findings.md  progress.md  task_plan.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  long-stability.yml  perf-smoke.yml  release.yml
apps/android-demo/: README.md  build-aar.sh  build-android-native.sh  build-apk.sh  build.gradle.kts  run-jni-smoke.sh  settings.gradle.kts
apps/android-demo/app/: build.gradle.kts  proguard-rules.pro
apps/android-demo/gsplat-android/: proguard-rules.pro
apps/android-demo/host-smoke/: build.gradle.kts
apps/android-demo/jni/: gsplat_jni.c
apps/desktop-demo/: Cargo.toml
apps/desktop-demo/src/: main.rs
apps/desktop-dev/: Cargo.toml
apps/desktop-dev/src/: main.rs
apps/ios-demo/: README.md  benchmark-ios-device-app.sh  build-ios-device-app.sh  build-ios-sim-app.sh  build-ios-sim.sh  build-xcframework.sh  run-ios-device-app.sh  run-ios-sim-app.sh  run-ios-sim-smoke.sh  run-swift-smoke.sh
apps/ios-demo/GsplatKit/: Package.swift  README.md
apps/ios-demo/app/: GsplatIOSDemo.swift
apps/ios-demo/smoke/: main.swift
apps/web-demo/: README.md  build-wasm.sh  build-web-sdk.sh  index.html  styles.css
apps/web-demo/gsplat-web-sdk/: README.md
apps/web-demo/gsplat-web-sdk/src/: index.d.ts
apps/web-demo/src/: main.js
bindings/: README.md
bindings/android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
bindings/android/gsplat-android/: build.gradle.kts
bindings/android/host-smoke/: build.gradle.kts
bindings/android/jni/: gsplat_jni.c
bindings/android/scripts/: build-aar.sh  build-native.sh  build-sample-apk.sh  collect-android-sort-benchmarks.py  ensure-gradle.sh  extract-android-benchmark-artifacts.py  run-jni-smoke.sh  test-android-benchmark-artifact-extraction.sh  test_android_sort_benchmark_collector.py
bindings/apple/: README.md
bindings/apple/GsplatKit/: README.md
bindings/apple/scripts/: benchmark-ios-device-app.sh  build-ios-device-app.sh  build-ios-sim-app.sh  build-ios-sim.sh  build-xcframework.sh  extract-ios-benchmark-artifacts.py  run-ios-device-app.sh  run-ios-sim-app.sh  run-ios-sim-smoke.sh  run-swift-smoke.sh  test-ios-benchmark-artifact-extraction.sh
bindings/apple/smoke/: main.swift
crates/gsplat-core/: Cargo.toml  README.md
crates/gsplat-core/src/: lib.rs
crates/gsplat-ffi-c/: Cargo.toml  README.md
crates/gsplat-ffi-c/include/: gsplat.h
crates/gsplat-ffi-c/src/: lib.rs
crates/gsplat-format/: Cargo.toml
crates/gsplat-format/src/: lib.rs
crates/gsplat-io-ply/: Cargo.toml  README.md
crates/gsplat-io-ply/src/: lib.rs
crates/gsplat-io-spz/: Cargo.toml  README.md
crates/gsplat-io-spz/src/: cache.rs  lib.rs
crates/gsplat-render-wgpu/: Cargo.toml  README.md
crates/gsplat-render-wgpu/shaders/: README.md  direct_gpu_order.wgsl  preprocess_instances.wgsl  splat.wgsl  splat_surface.wgsl  splat_surface_direct.wgsl  splat_surface_packed.wgsl  splat_surface_preproject.wgsl
crates/gsplat-render-wgpu/src/: direct_gpu_order.rs  draw_pass.rs  lib.rs  packed_atlas.rs  packed_gpu.rs  page_atlas.rs  page_scheduler.rs  page_source.rs  paged_active_set.rs  paged_gpu.rs  residency.rs  spatial_pages.rs  surface_presenter.rs  surface_session.rs
crates/gsplat-render-wgpu/tests/: conformance_sorted_alpha.rs
crates/gsplat-sort/: Cargo.toml  README.md
crates/gsplat-sort/shaders/: odd_even_sort.wgsl
crates/gsplat-sort/src/: lib.rs  radix.rs
crates/gsplat-web/: Cargo.toml  README.md
crates/gsplat-web/src/: lib.rs  wasm.rs
docs/: ARCHITECTURE.md  PROJECT_CONTEXT.md  VERIFICATION.md  api.md  architecture.md  release-v0.1.0-checklist.md  roadmap.md  v0.1.0-multi-subagent-plan.md  v0.1.0-subagent-execution.md
docs/adr/: 0001-v0.1-sortedalpha-only.md  README.md
docs/agent-notes/: README.md
docs/agent-notes/history/v0.1-closure/: findings.md  progress.md  task_plan.md
docs/archive/: README.md
docs/archive/planning/: 2026-02-enhanced-plan.md
docs/archive/releases/v0.1.0/: execution-plan.md  implementation-history.md
docs/media/: README.md
docs/plans/: README.md
examples/: README.md
examples/android/: README.md
examples/android/app/: build.gradle.kts  proguard-rules.pro
examples/desktop/: Cargo.toml  README.md
examples/desktop/src/: main.rs
examples/ios/: README.md
examples/ios/app/: BenchmarkArtifact.swift  GsplatIOSExample.swift  Info.plist
examples/web/: README.md  index.html  styles.css
examples/web/scripts/: collect-web-benchmark-artifact.mjs
examples/web/src/: benchmark-artifact.mjs  main.js
examples/web/test/: benchmark-artifact.test.mjs
handbook/: ARCHITECTURE.md  GOLDEN_PRINCIPLES.md  PROJECT_CONTEXT.md  ROADMAP.md  VERIFICATION.md
tests/competitive/playcanvas/: LICENSE.playcanvas  README.md  expected-engine.json  package-lock.json  package.json
tests/datasets/: README.md  fetch-nvidia-flowers-1.sh  fetch-wakufactory-kitune.sh  fetch_inria_3dgs_scenes.py  generate-minimal-binary.py  minimal_ascii.ply  minimal_binary.ply  minimal_v4_degree0.spz  ply_ladder.py  test_dataset_tools.py
tests/ffi/: ffi_smoke.c  run-ffi-smoke.sh
tests/perf/: benchmark-artifact-v1.md  compare-image-ssim.mjs  compare-paired-benchmarks.py  raster-diagnostic.mjs  run-long-stability.sh  test-benchmark-artifacts.sh  validate-benchmark-artifacts.py  validate-dataset-manifests.py
tests/perf/datasets/: README.md  flowers.json  kitsune.json  minimal_ascii.json  minimal_binary.json  nandi.local-candidate.json
tests/perf/trace/: README.md  generate_trace_v1.py  test-trace-v1.sh  trace_v1.py  validate_trace_v1.py
tests/release/: check-version.sh
tests/security/: run-cargo-deny.sh
tools/bench-runner/: Cargo.toml
tools/bench-runner/src/: artifact.rs  main.rs
tools/gsplat-pack/: Cargo.toml
tools/gsplat-pack/src/: main.rs
(+123 files in other folders)
