[workspace]
members = [
  "crates/gsplat-core",
  "crates/gsplat-io-ply",
  "crates/gsplat-sort",
  "crates/gsplat-render-wgpu",
  "crates/gsplat-ffi-c",
  "apps/desktop-demo",
  "tools/bench-runner",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["gsplat-rs contributors"]

[workspace.dependencies]
thiserror = "2.0.17"
wgpu = "28.0.0"
