[workspace]
members = [
  "crates/gsplat-core",
  "crates/gsplat-io-ply",
  "crates/gsplat-sort",
  "crates/gsplat-render-wgpu",
  "crates/gsplat-ffi-c",
  "crates/gsplat-web",
  "examples/desktop",
  "tools/bench-runner",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["gsplat-rs contributors"]
repository = "https://github.com/misotofu0525/gsplat-rs"
homepage = "https://github.com/misotofu0525/gsplat-rs"
rust-version = "1.93"

[workspace.dependencies]
thiserror = "2.0.17"
wgpu = "30.0.0"
