[workspace]
members = [
  "crates/gsplat-core",
  "crates/gsplat-io-ply",
  "crates/gsplat-io-spz",
  "crates/gsplat-sort",
  "crates/gsplat-render-wgpu",
  "crates/gsplat-ffi-c",
  "crates/gsplat-web",
  "examples/desktop",
  "tools/bench-runner",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["gsplat-rs contributors"]
repository = "https://github.com/misotofu0525/gsplat-rs"
homepage = "https://github.com/misotofu0525/gsplat-rs"
rust-version = "1.93"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting"] }
wgpu = "28.0.0"
ruzstd = "0.8.3"
