[package]
name = "desktop-dev"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
interactive-viewer = ["dep:winit", "dep:wgpu", "dep:pollster"]

[dependencies]
gsplat-core = { path = "../../crates/gsplat-core" }
gsplat-render-wgpu = { path = "../../crates/gsplat-render-wgpu" }
gsplat-io-ply = { path = "../../crates/gsplat-io-ply" }
png = "0.17.16"
winit = { version = "0.30.12", optional = true }
wgpu = { workspace = true, optional = true }
pollster = { version = "0.4.0", optional = true }
