[package]
name = "gsplat-io-spz"
version = "0.1.3"
description = "SPZ import and scene-buffer construction for gsplat-rs."
readme = "README.md"
keywords = ["gaussian-splatting", "spz", "3d", "parser"]
categories = ["parser-implementations", "graphics"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
gsplat-core = { path = "../gsplat-core", version = "0.1.3" }
ruzstd.workspace = true
thiserror.workspace = true

[dev-dependencies]
gsplat-io-ply = { path = "../gsplat-io-ply", version = "0.1.3" }
