[package]
name = "gsplat-render-wgpu"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gsplat-core = { path = "../gsplat-core" }
gsplat-sort = { path = "../gsplat-sort" }
wgpu.workspace = true
thiserror.workspace = true
bytemuck = { version = "1.20.0", features = ["derive"] }
pollster = "0.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.98"
web-sys = { version = "0.3.98", features = ["HtmlCanvasElement"] }

[dev-dependencies]
gsplat-io-ply = { path = "../gsplat-io-ply" }
