[package]
name = "gsplat-sort"
version = "0.1.0"
description = "CPU and GPU sort backends for gsplat-rs render ordering."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
wgpu.workspace = true
bytemuck = { version = "1.20.0", features = ["derive"] }
pollster = "0.4.0"
