[package]
name = "gsplat-sort"
version = "0.1.0"
description = "CPU and GPU sort backends for gsplat-rs render ordering."
readme = "README.md"
keywords = ["gaussian-splatting", "wgpu", "gpu", "sorting"]
categories = ["algorithms", "graphics"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
wgpu.workspace = true
bytemuck = { version = "1.20.0", features = ["derive"] }
pollster = "0.4.0"
