[package]
name = "gsplat-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gsplat-core = { path = "../gsplat-core" }
gsplat-io-ply = { path = "../gsplat-io-ply" }
gsplat-render-wgpu = { path = "../gsplat-render-wgpu" }
js-sys = "0.3.98"
wasm-bindgen = "0.2.121"
wasm-bindgen-futures = "0.4.71"
web-sys = { version = "0.3.98", features = ["HtmlCanvasElement"] }
