[package]
name = "gsplat-web"
version = "0.1.0"
description = "Experimental wasm-bindgen bindings for the gsplat-rs wgpu renderer."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gsplat-core = { path = "../gsplat-core", version = "0.1.0" }
gsplat-io-ply = { path = "../gsplat-io-ply", version = "0.1.0" }
gsplat-render-wgpu = { path = "../gsplat-render-wgpu", version = "0.1.0" }
js-sys = "0.3.98"
wasm-bindgen = "0.2.121"
wasm-bindgen-futures = "0.4.71"
web-sys = { version = "0.3.98", features = ["HtmlCanvasElement"] }
