[package]
name = "gsplat-web"
version = "0.1.3"
description = "Experimental wasm-bindgen bindings for the gsplat-rs wgpu renderer."
readme = "README.md"
keywords = ["gaussian-splatting", "wasm", "webgpu", "wgpu"]
categories = ["wasm", "graphics"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gsplat-core = { path = "../gsplat-core", version = "0.1.3" }
gsplat-io-ply = { path = "../gsplat-io-ply", version = "0.1.3" }
gsplat-render-wgpu = { path = "../gsplat-render-wgpu", version = "0.1.3" }
js-sys = "0.3.98"
wasm-bindgen = "0.2.121"
wasm-bindgen-futures = "0.4.71"
web-sys = { version = "0.3.98", features = ["HtmlCanvasElement"] }
